crates/toml_edit/tests/snapshots/invalid/table/no-close-01.stderr
TOML parse error at line 1, column 7
  |
1 | [where will it end
  |       ^
unclosed table, expected `]`
